--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 2020/day22/main.hi
 2020/day22/main.o
 2020/day22/main
+2020/day23/main
+2020/day23/main.hi
+2020/day23/main.o
+2020/day24/main
+2020/day24/main.hi
+2020/day24/main.o
