--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@
 2020/day24/main
 2020/day24/main.hi
 2020/day24/main.o
-2021/**target/**
-2022/**target/**
-2023/**target/**
+2021/**/target/**
+2022/aoc-2022/target/**
+2023/aoc-2023/target/
 *.iml
 .idea
 
